--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -327,12 +327,22 @@ a {
 }
 
 footer {
-  padding: 1em 0;
+  padding: .5em 0;
   background-color: #0c1f69;
 }
 
 footer > p {
   color: #fff;
   text-align: center;
+  margin: 0;
+}
+
+.logos {
+  text-align: center;
+}
+
+.logos img {
+  width: 100px;
+  display: inline-block;
 }
 /*# sourceMappingURL=main.css.map */
