--- a/0.01網站html/css/Style.css
+++ b/0.01網站html/css/Style.css
@@ -127,7 +127,8 @@ color:#45B035;
 
 #Content	{
 	padding-bottom:70px;
-	background-color: #652EAF;
+	background-color: #fff;
+	color: #002F7B;
 }
 .container {
 	width:950px \9;
@@ -238,10 +239,10 @@ width: 970px; /*調整導覽列寬度*/
 }
 
 #accordion {
-	border: 1px solid #fff;
+	border: 1px solid #002F7B;
 	border-radius: 4px;
 	margin: 0 15px 20px;
-	color: #fff;
+	
 }
 
 #accordion h3 {
@@ -253,28 +254,29 @@ width: 970px; /*調整導覽列寬度*/
 
 .fixed-btn {
 	position: fixed;
-    z-index: 99;
-    right: 10px;
-    bottom: 45%;
-    color: #fff;
-		background-color: #fffc00;
-		border: 1px solid #ccc;
-    border-radius: 50%;
-    width: 60px;
-    height: 60px;
-    color: #652fad;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+	z-index: 99;
+	right: 10px;
+	bottom: 45%;
+	color: #fff;
+	background-color: #fffc00;
+	border: 1px solid #ccc;
+	border-radius: 50%;
+	width: 60px;
+	height: 60px;
+	color: #0E8A9C;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-weight: bold;
 }
 
 .fixed-btn:hover {
-	color: #652fad;
+	color: #0E8A9C;
 	text-decoration: none;;
 }
 
 .qrcode {
-	color: #fffc00;
+	color: #002F7B;
 }
 
 .banner {
