--- a/醫療人_網站html/css/Style.css
+++ b/醫療人_網站html/css/Style.css
@@ -244,11 +244,19 @@ width: 970px; /*調整導覽列寬度*/
 	margin: 0 15px 20px;
 }
 
-#accordion h3 {
+#accordion .title {
 	margin: 0;
 	outline: none;
 	cursor: pointer;
 	padding: 10px;
+}
+
+#accordion .content {
+	padding-bottom: 5px;
+}
+
+#accordion .content > ol > li {
+	padding-right: 10px;
 }
 
 .fixed-btn {
