--- a/醫療人_網站html/css/Style.css
+++ b/醫療人_網站html/css/Style.css
@@ -244,18 +244,18 @@ width: 970px; /*調整導覽列寬度*/
 	margin: 0 15px 20px;
 }
 
-#accordion .title {
+#accordion > .title {
 	margin: 0;
 	outline: none;
 	cursor: pointer;
 	padding: 10px;
 }
 
-#accordion .content {
+#accordion > .content {
 	padding-bottom: 5px;
 }
 
-#accordion .content > ol > li {
+#accordion > .content > ol > li {
 	padding-right: 10px;
 }
 
@@ -273,7 +273,7 @@ width: 970px; /*調整導覽列寬度*/
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	font-weight: bold;
+	font-weight: bolder;
 }
 
 .fixed-btn:hover {
